# untitled-game

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
data/shaders/: sprite.frag  sprite.vert
src/: camera.cpp  camera.h  chunk.cpp  chunk.h  game.cpp  game.h  global.h  globals.h  map.cpp  map.h  resource_manager.cpp  resource_manager.h  settings.cpp  settings.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  tile.cpp  tile.h  timer.h  ui.cpp  ui.h
